* Fixed "image copy error in previews" bug in asinh transformation
* Fixed reset of the viewports when reopening the RGB composition tool after opening a mono sequence
* Fixed terminology - "weighted" instead of "weighed", consistency in name of PCC tool
* Enable detection for undersampled mono images
* Improve Wayland support
* Fixed incorrect option name in `show` help text
* Prevent cleaning stats from resetting the reference image
* Fixed photometry with 32bit images from PRISM
* Added Astro-TIFF in sequence export
* Force statistics for all images not from Siril (ensures DATAMAX is correct)
* Fixed incorrect behaviour when resetting right-hand stretch type in star recomposition tool
* Fixed GNUplot terminals so they remain interactive and free resources when closed
* Fixed crash that could occur when parsing string keywords that contained forbidden characters
* Fixed calling external processes that left too many opened file descriptors
* Fixed Stop behavior for starnet and local astrometry.net
* Added read of datetime in jpeg and png file with exiv2
* Added Danish language

siril 1.2.0-beta2
03/12/23

* Fixed behavior on Windows when calling external programs (StarNet, astrometry.net)
* Fixed crash when converting sequence to SER
* Fixed PCC progress bar which never terminated
* Fixed AppImage Build
* Fixed crash when using deconvolution on a sequence
* Fixed SSL certificates locations on Windows which where preventing SearchObject related functions to succeed
* Fixed reading BAYERPAT key if it was set to NONE
* Fixed StarNet behavior when TIFF compression was ON
* Fixed crash in synthstar (full resynthetize and desaturate)
* Fixed handling widechars in config files (Windows only) which caused a crash at startup
* Fixed crash when selecting datapoints in Plot tab
* Fixed crash when sending a seqplatesolve or seqstarnet command with no other argument