@@ -258,7 +258,15 @@ gpointer generic_sequence_worker(gpointer p) {
 			}
 			// TODO: for seqwriter, we need to notify the failed frame
 		}
-
+		// checking nb layers consistency
+		if (fit->naxes[2] != args->seq->nb_layers) {
+			siril_log_color_message(_("Image #%d: number of layers (%d) is not consistent with sequence (%d), aborting\n"), 
+			"red", input_idx + 1, fit->naxes[2], args->seq->nb_layers);
+			abort = 1;
+			clearfits(fit);
+			free(fit);
+			continue;
+		}
 		if (args->image_hook(args, frame, input_idx, fit, &area, nb_subthreads)) {
 			if (args->stop_on_error)
 				abort = 1;
