@@ -833,6 +833,11 @@ int seq_read_frame(sequence *seq, int index, fits *dest, gboolean force_float, i
 			else return 1;
 			break;
 	}
+	if (seq->nb_layers > 0 &&  seq->nb_layers != dest->naxes[2]) {
+		siril_log_color_message(_("Image #%d: number of layers (%d) is not consistent with sequence (%d), aborting\n"), "red", 
+			index, dest->naxes[2], seq->nb_layers);
+		return 1;
+	}
 	full_stats_invalidation_from_fit(dest);
 	copy_seq_stats_to_fit(seq, index, dest);
 	seq->imgparam[index].rx = dest->rx;
@@ -1461,7 +1466,7 @@ int sequence_find_refimage(sequence *seq) {
 		return 1; // green channel
 	int layer, image, best = -1;
 	for (layer = 0; layer < seq->nb_layers; layer++) {
-		if (seq->regparam[layer]) {
+		if (seq->regparam && seq->regparam[layer]) {
 			gboolean use_fwhm;
 			double best_val;
 			if (seq->regparam[layer][0].fwhm > 0.0) {
