@@ -64,7 +64,7 @@ int seqwriter_append_write(struct seqwriter_data *writer, fits *image, int index
 		return -1;
 	struct _pending_write *newtask = malloc(sizeof(struct _pending_write));
 	if (!newtask)
-		return -1;
+		return 1;
 	newtask->image = image;
 	newtask->index = index;
 
@@ -100,14 +100,24 @@ static void *write_worker(void *a) {
 					retval = SEQ_INCOMPLETE;
 					break;
 				}
-
+				// allowable cases:
+				// - different naxes[0] and naxes[1] if com.pref.core.allow_heterogeneous_fitseq is TRUE
+				// forbidden cases:
+				// - different naxes[0] and naxes[1] if com.pref.core.allow_heterogeneous_fitseq is FALSE
+				// - different naxes[0] and naxes[1] for a SER
+				// - different naxes[2]
+				// - different bitpix
 				if (writer->bitpix && task->image &&
-						(memcmp(task->image->naxes, writer->naxes, sizeof writer->naxes) ||
-						 task->image->bitpix != writer->bitpix)) {
+					((writer->output_type == SEQ_FITSEQ && !com.pref.allow_heterogeneous_fitseq && memcmp(task->image->naxes, writer->naxes, 2 * sizeof writer->naxes[0])) ||
+					(writer->output_type == SEQ_SER && memcmp(task->image->naxes, writer->naxes, 2 * sizeof writer->naxes[0])) ||
+					task->image->naxes[2] != writer->naxes[2] ||
+					task->image->bitpix != writer->bitpix)) {
 					siril_log_color_message(_("Cannot add an image with different properties to an existing sequence.\n"), "red");
 					retval = SEQ_WRITE_ERROR;
 					break;
 				}
+				if (!writer->bitpix && task->image)
+					init_images(writer, task->image);
 
 				if (task->index >= 0 && task->index != current_index) {
 					if (task->index < current_index) {
@@ -141,10 +151,6 @@ static void *write_worker(void *a) {
 			writer->frame_count--;
 			continue;
 		}
-
-		// from here on, we have a valid task and we will write an image
-		if (!writer->bitpix)
-			init_images(writer, task->image);
 
 		siril_log_message(_("writer: Saving image %d, %ld layer(s), %ux%u pixels, %d bits\n"),
 				task->index, task->image->naxes[2],
