@@ -22,13 +22,14 @@ xx/xx/xx
 * Fixed reset of the viewports when reopening the RGB composition tool after opening a mono sequence
 * Fixed terminology - "weighted" instead of "weighed", consistency in name of PCC tool
 * Enable detection for undersampled mono images
-* Improve Wayland support
+* Improved Wayland support
 * Fixed incorrect option name in `show` help text
 * Prevent cleaning stats from resetting the reference image
 * Fixed photometry with 32bit images from PRISM
 * Added Astro-TIFF in sequence export
 * Force statistics for all images not from Siril (ensures DATAMAX is correct)
 * Fixed incorrect behaviour when resetting right-hand stretch type in star recomposition tool
+* Fixed sequence handling when images have different number of layers
 * Fixed GNUplot terminals so they remain interactive and free resources when closed
 * Fixed crash that could occur when parsing string keywords that contained forbidden characters
 * Fixed calling external processes that left too many opened file descriptors
